Fix jumbotron dropdown item visibility

--- a/oh_queue/static/css/style.css
+++ b/oh_queue/static/css/style.css
@@ -53,6 +53,12 @@ a:hover {
   color: #fff;
   text-decoration: underline;
 }
+.jumbotron.blue a.btn {
+  text-decoration: none;
+}
+.jumbotron.blue .bootstrap-select a {
+  color: #333;
+}
 .jumbotron.blue .page-header {
   border: 0;
 }
